--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,8 +31,14 @@ jobs:
             - name: Build
               run: dotnet build --configuration Release --no-restore
 
-            - name: Test
-              run: dotnet test --no-build --verbosity normal
+            - name: Publish
+              run: dotnet publish --configuration Release --output ./publish
+
+            - name: Upload build artifacts
+              uses: actions/upload-artifact@v3
+              with:
+                  name: build-artifacts
+                  path: ./publish
 
     release:
         name: Release
@@ -47,15 +53,6 @@ jobs:
               uses: actions/setup-dotnet@v4
               with:
                   dotnet-version: "8.0.x"
-
-            - name: Restore dependencies
-              run: dotnet restore
-
-            - name: Build
-              run: dotnet build --configuration Release --no-restore
-
-            - name: Publish
-              run: dotnet publish --configuration Release --output ./publish
 
             - name: Create GitHub Release
               uses: softprops/action-gh-release@v2
