--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,7 +35,7 @@ jobs:
               run: dotnet publish --configuration Release --output ./publish
 
             - name: Upload build artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                   name: build-artifacts
                   path: ./publish
@@ -59,5 +59,6 @@ jobs:
               with:
                   tag_name: ${{ github.ref_name }}
                   name: Release ${{ github.ref_name }}
+                  files: ./publish/**/*
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
