--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -46,13 +46,10 @@ jobs:
         needs: build
         if: startsWith(github.ref, 'refs/tags/v')
         steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Setup .NET
-              uses: actions/setup-dotnet@v4
+            - name: Download build artifacts
+              uses: actions/download-artifact@v4
               with:
-                  dotnet-version: "8.0.x"
+                  name: build-artifacts
 
             - name: Create GitHub Release
               uses: softprops/action-gh-release@v2
