--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,7 +32,7 @@ jobs:
               run: dotnet build --configuration Release --no-restore
 
             - name: Publish
-              run: dotnet publish --configuration Release --output ./publish
+              run: dotnet publish src/LibraryManager/LibraryManager.csproj --configuration Release --output ./publish
 
             - name: Upload build artifacts
               uses: actions/upload-artifact@v4
